--- a/app.css
+++ b/app.css
@@ -1,13 +1,11 @@
 *{
     box-sizing: border-box;
-};
-body{
+}
+body,html{
     margin: 0;
     padding: 0;
     overflow-x: hidden;
     overflow-y: scroll;
-    height: 100vh;
-    width: 100vw;
 }
 .snap{
     height: 100vh;
@@ -66,8 +64,8 @@ body{
 .timeline{
     position: relative;
     margin: 0 auto;
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
 }
 .timeline::after{
     content: '';
