--- a/app.css
+++ b/app.css
@@ -18,10 +18,11 @@ body,html{
 }
 .aboutInfo{
     background-color:  #222831;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .photo{
-    display: block;
-    margin: auto;
     object-fit: cover;
     width: 50vw;
 }
@@ -74,7 +75,7 @@ body,html{
     top: 0;
     bottom: 0;
     left: 50%;
-    width: 6px;
+    width: 1em;
 }
 .container,.info-container{
     position: relative;
@@ -87,20 +88,20 @@ body,html{
 }
 .info-container{
     width: 50%;
-    font-size: 1.6em;
+    font-size: 1.5em;
     left: 50%;
     top: -16%;
 }
 .container::after{
     content: '';
     position: absolute;
-    width: 25px;
-    height: 25px;
+    width: 2em;
+    height:2em;
     z-index: 1;
     background-color: #ececec;
     border-radius: 50%;
     border: 3px solid #f2a365;
-    right: -19px;
+    right: -27px;
     top: 0;
 }
 
@@ -121,7 +122,7 @@ body,html{
     justify-items: center;
 }
 .skillIcons{
-    width: 5em;
+    width: 6em;
     margin: 90px;
     opacity: 0;
 }
@@ -131,7 +132,7 @@ body,html{
     width: 100%;
     color: #ececec;
     opacity: 0;
-    text-align: center;
+    text-align: left;
 }
 .credit a{
     text-decoration: none;
