--- a/app.css
+++ b/app.css
@@ -14,9 +14,8 @@ body,html{
 }
 .text{
     position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    top: 45%;
+    left: 0;
     font-size: 4em;
     background-color: #ececec;
     color: black;
@@ -24,7 +23,7 @@ body,html{
     font-weight: bold;
     margin: 0 auto;
     padding: 10px;
-    width: 70%;
+    width: 100vw;
     mix-blend-mode: screen;
     text-align: center;
     z-index: 1;
@@ -46,21 +45,23 @@ body,html{
     position: relative;
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
 .photo{
-    object-fit: cover;
+    object-fit: contain;
     width: 100vh;
     height:100vh;
 }
 .introduction{
     display: block;
     width: 40vw; 
-    font-size: 2em;
+    font-size: 1.9em;
     line-height: 1.5;
     color: #ececec;
     position: absolute;
     z-index: -1;
     transform:translateX(45%);
+    -webkit-transform:translateX(45%);
     white-space: pre-line;
 }
 .mail{
@@ -74,13 +75,6 @@ body,html{
     align-items: center;
     justify-content: center;
     color: #ececec;
-}
-.gradIcon{
-    width:1.6em;
-    height:1.6em;
-}
-.iconColor{
-    fill:#ececec;
 }
 .timeline{
     position: relative;
@@ -132,20 +126,22 @@ body,html{
     display: inline-block;
     margin: 0 auto;
     overflow-wrap: break-word;
-
+    overflow: hidden;
 }
 .info{
     margin-left: 50px;
     text-align: left;
+    transform: translateX(100vw);
+    -webkit-transform:translateX(100vw);
 }
 .year{
-    transform: translateX(-100%);
+    transform: translateX(-100vw);
+    -webkit-transform:translateX(-100vw); 
+    margin-left: 40px;
 }
-.info{
-    transform: translateX(100%);
+.iconColor{
+    fill: #ececec;
 }
-
-
 .skill-container{
     background-color: #222831;
     display: flex;
@@ -245,7 +241,7 @@ body,html{
     border-top: none;
     border-right: 1px #ececec solid;
     border-bottom: 1px #ececec solid;
-    animation-duration: 2s;
+    animation-duration: 1s;
     animation-iteration-count: infinite;
     animation-name: arrow;
 }
@@ -283,8 +279,6 @@ body,html{
 }
 footer{
     padding: 20px;
-    top: 1600vh;
-    position: absolute;
     font-size: 1.6em;
     background-color: #30475e;
     width: 100vw;
@@ -295,48 +289,65 @@ footer a{
     margin: 10px;
 }
 @media only screen and (max-width:750px){
-    .introduction{
-        transform:translate(20%,40%);
-        min-width:338px;
-    }
-    .timeline::after{
-        Left:31px;
-        width:10px;
-    }
-    .container,.info-container{
-        width:calc(100% - 41px);
-        margin-top:50px;
-        margin-left:15px;
-    }
-    .container::after{
-        left:-6px;
-    }
-    .right{
-        left:0
-    }
-    .concept{
-        width:calc(100% - 41px);
-        overflow-wrap:break-word;
-    }
-    .skillIcons{
-        margin:20px;
-    }
-    .skill{
-        flex-direction:column;
-    }
-    .card{
-        width: 80%;
-        margin: 0;
-    }
-    .card-container{
-        flex-direction: column;
-    }
-    .card2{
-        display: none;
-    }
-    .changeBtn{
-        display: flex;
-        margin-top: 30px;
-    }
+.introduction{
+    transform:translate(20%,40%);
+    min-width:338px;
+    line-height: 1.3;
+}
+.timeline::after{
+    Left:31px;
+    width:10px;
+}
+.container,.info-container{
+    width:calc(100% - 41px);
+    margin-top:30px;
+    margin-left:15px;
+}
+.container::after{
+    left:-6px;
+}
+.right{
+    left:0
+}
+.concept{
+    width:calc(100% - 41px);
+    overflow-wrap:break-word;
+    overflow: hidden;
+    position: relative;
+}
+.yearInfo{
+    position: relative;
+    overflow: hidden;
+}
+.year{
+    transform: translateX(100vw);
+    -webkit-transform:translateX(100vw); 
+}
+.info{
+    transform: translateX(100vw);
+    -webkit-transform:translateX(100vw); 
+} 
+.skillIcons{
+    margin:20px;
+    width: 5em;
+}
+.skill{
+    flex-direction:column;
+}
+.card{
+    width: 80%;
+    margin: 0;
+    display: none;
+}
+.card-container{
+    flex-direction: column;
+}
+#card2{
+    display: none;
+}
+.changeBtn{
+    display: flex;
+    margin-top: 30px;
+}
 
 }
