--- a/app.css
+++ b/app.css
@@ -12,6 +12,14 @@ body,html{
     width: 100vw;
     position: absolute;
 }
+.overlay{
+    position: absolute;
+    z-index: 1;
+    background:#222831;
+    width: 100vw;
+    height: 100vh;
+    opacity: 0.4;
+}
 .text{
     position: fixed;
     top: 45%;
@@ -26,7 +34,7 @@ body,html{
     width: 100vw;
     mix-blend-mode: screen;
     text-align: center;
-    z-index: 1;
+    z-index: 2;
 }
 .video{
     display: flex;
