--- a/app.css
+++ b/app.css
@@ -6,6 +6,7 @@ body,html{
     padding: 0;
     overflow-x: hidden;
     overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
 }
 .snap{
     height: 100vh;
