--- a/app.css
+++ b/app.css
@@ -7,7 +7,7 @@ body,html{
     padding: 0;
     overflow-x: hidden;
     overflow-y: scroll;
-    height: 100%;
+    height: auto;
 }
 .snap{
     height: 100vh;
