reedit the body setting

--- a/app.css
+++ b/app.css
@@ -1,6 +1,7 @@
 *{
     box-sizing: border-box;
-    /* -webkit-overflow-scrolling: touch; */
+    -webkit-overflow-scrolling: touch;
+    height: 100%;
 }
 body,html{
     margin: 0;
@@ -9,10 +10,10 @@ body,html{
     overflow-y: scroll;
 }
 body > div {
-    transform: translate3d(0,0,0);
-    -webkit-transform: translate3d(0,0,0);
+    /* transform: translate3d(0,0,0);
+    -webkit-transform: translate3d(0,0,0); */
     -webkit-overflow-scrolling: touch;
-  }
+}
 .snap{
     height: 100vh;
     width: 100vw;
