--- a/app.css
+++ b/app.css
@@ -7,13 +7,14 @@ body,html{
     padding: 0;
     overflow-x: hidden;
     overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
     height: 100%;
 }
-body > div {
+/* body > div {
     /* transform: translate3d(0,0,0);
-    -webkit-transform: translate3d(0,0,0); */
+    -webkit-transform: translate3d(0,0,0); 
     -webkit-overflow-scrolling: touch;
-}
+} */
 .snap{
     height: 100vh;
     width: 100vw;
