--- a/app.css
+++ b/app.css
@@ -6,13 +6,12 @@ body,html{
     padding: 0;
     overflow-x: hidden;
     overflow-y: scroll;
-    height: 100%;
 }
-/* body > div {
-    /* transform: translate3d(0,0,0);
+body > div {
+    transform: translate3d(0,0,0);
     -webkit-transform: translate3d(0,0,0); 
     -webkit-overflow-scrolling: touch;
-} */
+}
 .snap{
     height: 100vh;
     width: 100vw;
