--- a/app.css
+++ b/app.css
@@ -17,6 +17,70 @@ body > div {
     width: 100vw;
     position: absolute;
 }
+.preload{
+    position: fixed;
+    top: 0;
+    height: 100vh;
+    width: 100vw;
+    background-color: #ececec;
+    display: flex;
+    justify-content: center;
+    transition: opacity .5s ease;
+}
+.preload-finish{
+    opacity: 0;
+    pointer-events: none;
+}
+.cube{
+    width: 5em;
+    height: 5em;
+    top: 50%;
+    position: absolute;
+    transform-style: preserve-3d;
+    transform: rotateX(240deg) rotateY(-5deg) rotateZ(-155deg);
+    animation: bounce .5s infinite alternate linear;
+    -webkit-animation: bounce .6s infinite alternate linear;
+}
+@keyframes bounce {
+    0% {
+      transform: translateY(0px) scale(2);
+    }
+    50%{
+        transform: translateY(-25%);
+    }
+    100% {
+      transform: translateY(-50%);
+    }
+  }
+  @-webkit-keyframes bounce {
+    from {
+      transform: translateY(0);
+    }
+    to {
+      transform: translateY(-70%);
+    }
+  }
+.side {
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    position: absolute;
+    border-radius: 10%;
+    background-color: #f2a365;
+  }
+.topSide{
+    transform: translateZ(-5em);
+}
+.front{
+    transform: rotateX(90deg);
+    transform-origin: bottom;
+}
+.leftSide{
+    width: 5em;
+    transform: translateZ(-5em) rotateY(90deg);
+    transform-origin: right;
+}
 .overlay{
     position: absolute;
     z-index: 1;
