--- a/app.css
+++ b/app.css
@@ -26,6 +26,7 @@ body > div {
     display: flex;
     justify-content: center;
     transition: opacity .5s ease;
+    -webkit-transition: opacity .5s ease;
 }
 .preload-finish{
     opacity: 0;
