--- a/app.css
+++ b/app.css
@@ -445,6 +445,7 @@ footer a{
     transform:translate(20%,50%);
     min-width:338px;
     line-height: 1.3;
+    font-size:1.6em;
 }
 .timeline::after{
     Left:31px;
@@ -489,8 +490,8 @@ footer a{
     flex-direction:column;
 }
 .card{
-    width: 80%;
-    margin: 0;
+    width: 70%;
+    margin: 20px;
 }
 .card-container{
     flex-direction: column;
@@ -500,7 +501,9 @@ footer a{
 }
 .changeBtn{
     display: flex;
-    margin-top: 30px;
+}
+.projectInfo{
+    font-size:1.5em;
 }
 
 }
